Had to lie a bit regarding this being generated by Glade 2 to keep Gettext happy :(

--- a/lib/nametags/nametags.glade
+++ b/lib/nametags/nametags.glade
@@ -1,4 +1,6 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
+<!--Generated with glade3 3.4.5 on Tue Apr 14 11:39:22 2009 -->
 <glade-interface>
   <!-- interface-requires gtk+ 2.16 -->
   <!-- interface-naming-policy toplevel-contextual -->
