--- a/app/views/proposals/_form.html.erb
+++ b/app/views/proposals/_form.html.erb
@@ -18,5 +18,8 @@
 <%= f.auto_field :title %>
 <%= f.auto_field :abstract %>
 <%= f.auto_field :prop_type_id %>
+<% proposal.extra_listable_attributes.each do |attr| %>
+  <%= f.auto_field(attr.name) %>
+<% end %>
 <%= f.submit submit_label %>
 <% end %>
