SysConf URLs are more reliably generated if keyed by key, not by ID

--- a/app/views/sys_conf_adm/edit.html.erb
+++ b/app/views/sys_conf_adm/edit.html.erb
@@ -3,7 +3,7 @@
        'your system inoperable. Proceed at your own risk, and only if you ' +
        'know what you are doing.'  %></p>
 <% comas_form_for :sys_conf, @conf, 
-                  :url => {:action => :update, :id => @conf} do |f| %>
+                  :url => {:action => :update, :key => @conf.key} do |f| %>
   <%= f.text_field :descr %>
   <%= f.text_area :value, :rows => 3, :cols => 60 %>
   <%= f.submit _'Save changes' %>
