--- a/app/views/people/proposals.html.erb
+++ b/app/views/people/proposals.html.erb
@@ -27,9 +27,7 @@
 	<%= link_to(_('Edit'), :controller => 'proposals',
 	            :action => 'edit', :id => prop.id) %> |
 	<%= link_to(_('Manage authors'), :controller => 'proposals',
-	            :action => 'authors', :id => prop.id) %> |
-	<%= link_to(_('Files'), :controller => 'proposals',
-	            :action => 'files', :id => prop.id) %>
+	            :action => 'authors', :id => prop.id) %>
       </td>
     <% end %>
   <% end %>
