--- a/app/views/people/profile.html.erb
+++ b/app/views/people/profile.html.erb
@@ -1,8 +1,19 @@
+<% if @user and @user.has_admin_task? :sys_conf_adm %>
+  <div class="note">
+    <%= _('You can configure the field names to appear in the public ' +
+	  'profile under the %s configuration key') %
+	link_to('person_profile_fields', :controller => 'sys_conf_adm', 
+                :action => 'edit', :key => 'person_profile_fields') %>
+  </div>
+<% end %>
+
 <h1><%= _('Public information for %s') % @person.name %></h1>
+
+<%= link_to_photo(@person) %>
 
 <%= public_attributes(@person) %>
 
-<% if ! @person.proposals.nil? %>
+<% if ! @person.proposals.empty? %>
   <h3><%= _('Proposals submitted') %></h3>
   <% table do %>
     <% table_head_row do %>
