--- a/app/views/people/_pers_data.html.erb
+++ b/app/views/people/_pers_data.html.erb
@@ -21,10 +21,17 @@
   <% person.extra_listable_attributes.each do |attr| %>
     <%= f.auto_field(attr.name) %>
   <% end %>
-  <%= f.file_field(:photo, :note => person.has_photo? ? 
-                   _('You have already uploaded your photo to the ' +
-                     'system. If you upload a new one, the current ' +
-                     'will be overwritten.') : '') %>
+  <% photo_note = _('You can provide a photo to be used for your ' +
+                    'nametag generation, to appear as part of your ' +
+                    'public personal profile, and during your interfacing ' +
+                    'with the system.')
+     if person.has_photo?
+       photo_note << '<br/>' << _('You have already uploaded your ' +
+                     'photo to the system. If you upload a new one, ' +
+                     'the current will be overwritten.')
+     end
+  %>
+  <%= f.file_field(:photo, :note => photo_note) %>
   <%= f.auto_field(:ok_general_mails, :note => _('Are you interested ' +
                    'in receiving general information mails from us?')) %>
   <%= f.auto_field(:ok_conf_mails, :note => _('Are you interested ' +
