Added a comas-for-admin CSS class, for administrative information/links shown in non-administrative pages

--- a/app/views/conferences/show.html.erb
+++ b/app/views/conferences/show.html.erb
@@ -1,5 +1,5 @@
 <% if @user %>
-  <div class="note">
+  <div class="comas-for-admin">
     <%= conf_edit_links(@conference) %>
     <%= sign_up_person_for_conf_link(@user, @conference) %>
   </div>
