--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,7 @@
 <%= rss_links %>
 
 <title><%= @title %></title>
-<%= javascript_include_tag :defaults %>
-<%= javascript_include_tag 'calendar' %>
+<%= javascript_include_tag :all, :cache => true %>
 </head>
 <body>
   <div id="header"><%= @title %>
