--- a/app/views/people/account.html.erb
+++ b/app/views/people/account.html.erb
@@ -32,7 +32,7 @@
 	     'register its name as the ' +
 	     '<tt>%s</tt> key in the %s interface') %
 	   [link_to(_('define a suitable format'),
-	            :controller => 'sys_conf_adm', :action => 'certif_formats'),
+	            :controller => 'certificates_adm', :action => 'list'),
             'personal_nametag_format',
             link_to(_('Configuration entries'),
                     :controller => 'sys_conf_adm', :action => 'list')
