Split CSS to be more external-layout-friendly

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <%  headers["Content-Type"] = "text/html; charset=utf-8" %>
-<%= stylesheet_link_tag('comas.css',
+<%= stylesheet_link_tag('comas.css', 'comas_layout.css',
 			'calendar.css') %>
 <%= rss_links %>
 
