--- a/app/views/attendance_adm/list.html.erb
+++ b/app/views/attendance_adm/list.html.erb
@@ -11,6 +11,10 @@
     <h3><%= _'No attendances registered' %></h3>
   <% else %>
     <h2><%= _'Full listing, ordered by number of attendances' %></h2>
+
+    <p><%= link_to(_('Download full listing as a spreadsheet'),
+                   :action => 'xls_list', :conference_id => @conference) %></p>
+
     <% @totals.keys.sort.each do |num| %>
       <%= render(:partial => 'list_by_attendances', 
                  :locals => {:num => num, :list => @totals[num],
