--- a/app/views/people_adm/_form.html.erb
+++ b/app/views/people_adm/_form.html.erb
@@ -1,11 +1,13 @@
 <% # Ordered list of fields we will present to the user 
-  fields = %w(login passwd firstname famname email admin_tasks
-               conferences ok_conf_mails ok_general_mails).
+  fields = %w(login passwd firstname famname email
+              ok_conf_mails ok_general_mails).
   concat(@person.extra_listable_attributes.map(&:name)) %>
 <% comas_form_for(:person, @person, 
                   :url => {:action => action, :id => @person}) do |f| %>
   <% fields.each do |attr|%>
     <%= f.auto_field attr %>
   <% end %>
+  <%= f.auto_field :admin_tasks %>
+  <%= f.auto_field :conferences %>
 <%= f.submit submit %>
 <% end %>
