Corrijo ActionView::TemplateError (can't modify frozen string) al intentar modificar perfil

--- a/app/views/people/_pers_data.html.erb
+++ b/app/views/people/_pers_data.html.erb
@@ -26,8 +26,8 @@
                     'public personal profile, and during your interfacing ' +
                     'with the system.')
      if person.has_photo?
-       photo_note << '<br/>' << _('You have already uploaded your ' +
-                     'photo to the system. If you upload a new one, ' +
+       photo_note = photo_note + '<br/>' + _('You have already uploaded ' +
+                     'your photo to the system. If you upload a new one, ' +
                      'the current will be overwritten.')
      end
   %>
