Fixed: <div> not properly closed hid a form

--- a/app/views/conferences_adm/mail_attendees.html.erb
+++ b/app/views/conferences_adm/mail_attendees.html.erb
@@ -14,7 +14,8 @@
 
 <% form_tag do |f| %>
   <div id="conf-list">
-  <%= render :partial => 'conferences_ckbox_table' %>
+    <%= render :partial => 'conferences_ckbox_table' %>
+  </div>
   <%= form_row _('Title'), text_field_tag(:title, '', :size => 60) %>
   <%= form_row _('Mail body'), 
                text_area_tag(:body, '', :size => '60x10'),
