Fix Javascript to focus the right element when taking attendance

--- a/app/views/attendance_adm/take.html.erb
+++ b/app/views/attendance_adm/take.html.erb
@@ -1,3 +1,4 @@
+
 <h1><%= _'Take attendance' %></h1>
 <p class="note">
   <%= _('Taking attendance for session starting at %s, belonging '+
@@ -10,7 +11,7 @@
   <%= submit_tag _('Save attendance') %>
 <% end %>
 <script language="JavaScript">
-  document.getElementById("take_attendance").elements[0].focus()
+  document.getElementById("person_id").focus()
 </script>
 
 <div id="last-attendances">
